@@ -273,15 +273,22 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_MAYBE_UNUSED_H, C_SY1( false, L_MAYBE_UNUSED        ) },
   { L_MBR,            TOKEN( Y_MEMBER                     ) },
   { L_MEMBER,         TOKEN( Y_MEMBER                     ) },
+  { L_NO_DISCARD,     C_SY1( false, L_NODISCARD           ) },
+  { L_NO_EXCEPT,      C_SY1( false, L_NOEXCEPT            ) },
   { L_NO_EXCEPTION,   C_SY1( false, L_NOEXCEPT            ) },
+  { L_NO_RETURN,      C_SYN( false,
+                        { { LANG_C_MIN(11), L__NORETURN },
+                          { LANG_ALL,       L_NORETURN  } } ) },
   { L_NON_DISCARDABLE,
                       C_SY1( false, L_NODISCARD           ) },
   { L_NON_MBR,        TOKEN( Y_NON_MEMBER                 ) },
   { L_NON_MEMBER,     TOKEN( Y_NON_MEMBER                 ) },
-  { L_NON_RETURNING,  C_SYN( true,
+  { L_NON_RETURNING,  C_SYN( false,
                         { { LANG_C_MIN(11), L__NORETURN },
                           { LANG_ALL,       L_NORETURN  } } ) },
   { L_NON_THROWING,   C_SY1( false, L_THROW             ) },
+  { L_NO_UNIQUE_ADDRESS_H,
+                      C_SY1( false, L_NO_UNIQUE_ADDRESS ) },
   { L_NON_UNIQUE_ADDRESS,
                       C_SY1( false, L_NO_UNIQUE_ADDRESS ) },
   { L_NORETURN,       C_SYN( true,
